# selene-bot

./: Cargo.toml  config.toml  history.txt
selene.db/: 000013.sst  IDENTITY  LOG  LOG.old.1686464008072840  MANIFEST-000010
src/: cmd.rs  error.rs  main.rs
src/clients/: mod.rs  serreal.rs
src/configs/: mod.rs
src/handlers/: commands_handler.rs  influx_writer.rs  mod.rs  surreal_writer.rs
src/model/: mod.rs
src/model/command/: deleted_history.rs  mod.rs  username_history.rs
src/model/query/: deleted_history.rs  mod.rs
src/models/: mod.rs
